kustomize/base/gateway-api/gatewayclass.yaml
# GatewayClass defines the class of Gateways that will be managed by NGINX Gateway Fabric
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx
spec:
  controllerName: gateway.nginx.org/nginx-gateway-controller
  parametersRef:
    group: gateway.nginx.org
    kind: NginxGateway
    name: nginx-gateway-params
    namespace: nginx-gateway
